--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <h2>聯絡方式</h2>
     <ul>
-      <li>Email: example@example.com</li>
+      <li>Email:c113181110@nkust.edu.tw</li>
       <li>GitHub: <a href="https://github.com/yourusername" target="_blank">yourusername</a></li>
     </ul>
 
